# swagger.json
@@ -20,6 +20,78 @@
     }
   ],
   "paths": {
+    "/users": {
+      "get": {
+        "summary": "Lista de todos os usuários",
+        "description": "Rota responsável por listar todos os usuários",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "username": "user",
+            "in": "path",
+            "description": "User para busca",
+            "required": false
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                      "schema": {
+                      "type": "array"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "/users/create": {
+          "post": {
+            "summary": "Cadastrar Usuário",
+            "description": "Rota responsável por cadastrar um usuário",
+            "tags": ["Users"],
+            "requestBody": {
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object"
+                  },
+                  "examples": {
+                    "Usuário": {
+                      "value": {
+                        "nameUser": "Rick Sanche",  
+                        "username": "",
+                        "email": "",
+                        "password": "",
+                        "photo": "https://rickandmortyapi.com/api/character/avatar/1.jpeg"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "responses": {
+              "400": {
+                "description": "Bad Request"
+              },
+              "201": {
+                "description": "Created",
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "type": "object"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
     "/all-api": {
       "get": {
         "summary": "Lista de todos os personagens",
@@ -55,6 +127,37 @@
             "name": "id",
             "in": "path",
             "description": "Id do Personagem",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Character"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/search-name/:name": {
+      "get": {
+        "summary": "Busca um personagem pelo Nome",
+        "description": "Rota responsável por buscar um unico personagem pelo Nome",
+        "tags": ["Personagem"],
+        "parameters": [
+          {
+            "name": "Name",
+            "in": "path",
+            "description": "Nome do Personagem",
             "required": true
           }
         ],
@@ -202,5 +305,46 @@
         }
       }
     }
-  }
+  },
+  "/auth/login": {
+    "post": {
+      "summary": "Realizar Login",
+      "description": "Rota para Login de usuario",
+      "tags": ["Auth"],
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object"
+            },
+            "examples": {
+              "Usuário": {
+                "value": {
+                  "email": "pedro@gmail.com",
+                  "password": "12345"
+                }
+              }
+            }
+          }
+        }
+      },
+      "responses": {
+        "400": {
+          "description": "Bad Request"
+        },
+        "201": {
+          "description": "Created",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  
+      
 }
